# maze-defence

./: .gitattributes  AGENTS.md  Cargo.toml  README.md  architecture-guards.md  architecture.md  build-mode.md  gameplay.md  macroquad-ui-impl.md  message-contracts.md  movement.md  path-impl.md  path-spec.md  pressure-draft-v3.md  pressure-impl.md  pressure-spec-v2.md  pressure-spec.md  rust-idiom-mandate.md  speed-impl.md  speed-spec.md  sprite-impl.md  sprite-spec.md  stats-impl.md  target-impl.md  target-spec.md  tile_cell.md  tower-impl.md  tower-shooting-impl.md  tower-shooting-spec.md  tower-spec.md  walls.md
.cargo/: config.toml
adapters/cli/: Cargo.toml
adapters/cli/src/: layout_transfer.rs  main.rs
adapters/cli/tests/: cli_compilation.rs
adapters/rendering/: Cargo.toml
adapters/rendering/src/: lib.rs
adapters/rendering_macroquad/: Cargo.toml
adapters/rendering_macroquad/src/: lib.rs  sprites.rs  ui.rs
adapters/rendering_macroquad/tests/: control_panel_button_replay.rs
assets/: README.md  manifest.toml
assets/sprites/: README.md
assets/sprites/bugs/: README.md
assets/sprites/ground/: README.md
assets/sprites/towers/: README.md
core/: Cargo.toml
core/src/: lib.rs
systems/analytics/: Cargo.toml
systems/analytics/src/: lib.rs  metrics.rs
systems/analytics/tests/: analytics.rs  deterministic_replay.rs
systems/bootstrap/: Cargo.toml
systems/bootstrap/src/: lib.rs
systems/builder/: Cargo.toml
systems/builder/src/: lib.rs
systems/builder/tests/: builder.rs
systems/movement/: Cargo.toml
systems/movement/src/: lib.rs
systems/movement/tests/: deterministic_replay.rs  movement.rs
systems/pressure_v2/: Cargo.toml
systems/pressure_v2/src/: lib.rs
systems/spawning/: Cargo.toml
systems/spawning/src/: lib.rs
systems/spawning/tests/: spawning.rs
systems/tower_combat/: Cargo.toml
systems/tower_combat/src/: lib.rs
systems/tower_targeting/: Cargo.toml
systems/tower_targeting/src/: lib.rs
systems/tower_targeting/tests/: deterministic_replay.rs
systems/wave_generation/: Cargo.toml
systems/wave_generation/src/: lib.rs
tests/: movement.rs
world/: Cargo.toml
world/src/: analytics.rs  lib.rs  navigation.rs  towers.rs
