[workspace]
members = [
    "core",
    "world",
    "systems/bootstrap",
    "systems/movement",
    "systems/spawning",
    "adapters/rendering",
    "adapters/rendering_macroquad",
    "adapters/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
