[workspace]
members = [
    "core",
    "world",
    "systems/builder",
    "systems/bootstrap",
    "systems/movement",
    "systems/spawning",
    "systems/pressure_v2",
    "systems/tower_targeting",
    "systems/tower_combat",
    "adapters/rendering",
    "adapters/rendering_macroquad",
    "adapters/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
