[package]
name = "maze-defence-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }
glam = "0.24"
maze-defence-system-bootstrap = { path = "../../systems/bootstrap" }
maze-defence-system-builder = { path = "../../systems/builder" }
maze-defence-system-movement = { path = "../../systems/movement" }
maze-defence-system-spawning = { path = "../../systems/spawning" }
maze-defence-system-tower-combat = { path = "../../systems/tower_combat" }
maze-defence-system-tower-targeting = { path = "../../systems/tower_targeting" }
maze-defence-world = { path = "../../world", features = ["tower_scaffolding"] }
maze-defence-rendering = { path = "../rendering" }
maze-defence-rendering-macroquad = { path = "../rendering_macroquad" }
maze-defence-core = { path = "../../core" }

[[bin]]
name = "maze-defence"
path = "src/main.rs"

