[package]
name = "maze-defence-system-movement"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
maze-defence-core = { path = "../../core" }
maze-defence-world = { path = "../../world" }

[dev-dependencies]
maze-defence-world = { path = "../../world", features = ["tower_scaffolding"] }
