[package]
name = "maze-defence-pressure-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
maze-defence-core = { path = "../../core" }
rand = { version = "0.8", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }
rand_distr = { version = "0.4", default-features = false, features = ["std"] }
